--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -171,7 +171,7 @@
                                                     'label': 'Site language (code)',
                                                     'description': [
                                                         'Sets the language of the site and the value of the attribute <code>&lt;html lang="en"&gt;</code>',
-                                                        'For example: <code>en-US</code>, <code>uk-UA</code>, <code>ru-RU</code>'
+                                                        'For example: <code>en-US</code>'
                                                     ]|locale|join('<br>'),
                                                     'type': 'text',
                                                     'name': 'common[language]',
