--- a/src/Template/cup/catalog/order/invoice/index.twig
+++ b/src/Template/cup/catalog/order/invoice/index.twig
@@ -13,28 +13,30 @@
 {% block content %}
     <div class="row">
         <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <form action="/cup/parameters?return=/cup/catalog/order/invoice" method="post">
-                        <div class="row p-0">
-                            <div class="col-12">
-                                <style>#invoice [data-input] {padding: 0;}</style>
+            <form action="/cup/parameters?return=/cup/catalog/order/invoice" method="post">
+                <div class="card">
+                    <div class="card-body p-0">
+                        <div id="invoice">
+                            <style>#invoice [data-input] {padding: 0;}</style>
 
-                                {% include 'cup/editor.twig' with {
-                                    'name': 'catalog[invoice]',
-                                    'args': {
-                                        'id': 'code',
-                                        'text_mode': true,
-                                        'value': invoice,
-                                    }
-                                } %}
-
-                                <button type="submit" class="btn btn-outline-primary mt-3">{{ 'Save'|locale }}</button>
-                            </div>
+                            {% include 'cup/editor.twig' with {
+                                'name': 'catalog[invoice]',
+                                'args': {
+                                    'id': 'code',
+                                    'text_mode': true,
+                                    'value': invoice,
+                                }
+                            } %}
                         </div>
-                    </form>
+                    </div>
+
+                    <div class="card-action">
+                        <button type="submit" class="btn btn-primary" style="height: 40px;">
+                            Save
+                        </button>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 {% endblock %}
