--- a/src/Template/cup/file/index.twig
+++ b/src/Template/cup/file/index.twig
@@ -18,7 +18,7 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th>{{ 'Firstname'|locale }}</th>
+                                <th>{{ 'File name'|locale }}</th>
                                 <th width="15%">{{ 'Size'|locale }}</th>
                                 <th width="15%" class="d-none d-md-table-cell">{{ 'Creation date'|locale }}</th>
                                 <th width="20%" class="text-right"></th>
