--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -770,7 +770,7 @@
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-5 col-md-4">
                                         <div class="nav flex-column nav-pills nav-secondary">
-                                            <a class="nav-link active"  data-toggle="pill" href="#catalog-general">{{ 'Основное'|locale }}</a>
+                                            <a class="nav-link active"  data-toggle="pill" href="#catalog-general">{{ 'General'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#catalog-notify">{{ 'Notifications'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#catalog-import-export">{{ 'Import and Export'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#catalog-additional">{{ 'Additionally'|locale }}</a>
