--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -119,8 +119,8 @@
                                             'type': 'text',
                                             'name': 'language',
                                             'args': {
-                                                'placeholder': 'en-US',
-                                                'value': item.language ? item.language : _language,
+                                                'placeholder': _language,
+                                                'value': item.language ? item.language : '',
                                             }
                                         } %}
                                     </div>
