fix cms cup title

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.twig' %}
 
-{% block title %}ЦУП CMS{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css?v={{ SHA }}">
