--- a/theme/default/catalog.category.twig
+++ b/theme/default/catalog.category.twig
@@ -103,7 +103,7 @@
                                         {% endfor %}
                                     {% else %}
                                         <div class="col-12 py-5 text-center">
-                                            <h4>Здесь ничего нет</h4>
+                                            <h4>There's nothing here</h4>
                                             <p>
                                                 Try to <a href="{{ non_page_path() }}{{ page ? '/' ~ page : '' }}">remove filters</a>
                                                 {% if category %}
