--- a/theme/default/components/blog.twig
+++ b/theme/default/components/blog.twig
@@ -11,73 +11,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-12">
+            {% for item in publication({}, [], 3) %}
                 <!-- Start Single Blog -->
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="#">
-                            <img src="https://via.placeholder.com/370x215" alt="#">
-                        </a>
-                    </div>
-                    <div class="blog-content">
-                        <a class="category" href="javascript:void(0)">eCommerce</a>
-                        <h4>
-                            <a href="#">What information is needed for shipping?</a>
-                        </h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt.</p>
-                        <div class="button">
-                            <a href="javascript:void(0)" class="btn">Read More</a>
-                        </div>
-                    </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    {% include item.category.template.short with {'item': item} %}
                 </div>
                 <!-- End Single Blog -->
-            </div>
-            <div class="col-lg-4 col-md-6 col-12">
-                <!-- Start Single Blog -->
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="#">
-                            <img src="https://via.placeholder.com/370x215" alt="#">
-                        </a>
-                    </div>
-                    <div class="blog-content">
-                        <a class="category" href="javascript:void(0)">Gaming</a>
-                        <h4>
-                            <a href="#">Interesting fact about gaming consoles</a>
-                        </h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt.</p>
-                        <div class="button">
-                            <a href="javascript:void(0)" class="btn">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Single Blog -->
-            </div>
-            <div class="col-lg-4 col-md-6 col-12">
-                <!-- Start Single Blog -->
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="#">
-                            <img src="https://via.placeholder.com/370x215" alt="#">
-                        </a>
-                    </div>
-                    <div class="blog-content">
-                        <a class="category" href="javascript:void(0)">Electronic</a>
-                        <h4>
-                            <a href="#">Electronics, instrumentation & control engineering
-                            </a>
-                        </h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt.</p>
-                        <div class="button">
-                            <a href="javascript:void(0)" class="btn">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Single Blog -->
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
