--- a/theme/default/common/footer.twig
+++ b/theme/default/common/footer.twig
@@ -40,13 +40,13 @@
                         <!-- Single Widget -->
                         <div class="single-footer f-contact">
                             <h3>Get In Touch With Us</h3>
-                            <p class="phone">Phone: +1 (900) 33 169 7720</p>
+                            <p class="phone">Phone: {{ parameter('var_phone', '+1 (900) 00 000 0000') }}</p>
                             <ul>
                                 <li><span>Monday-Friday: </span> 9.00 am - 8.00 pm</li>
                                 <li><span>Saturday: </span> 10.00 am - 6.00 pm</li>
                             </ul>
                             <p class="mail">
-                                <a href="mailto:support@shopgrids.com">support@shopgrids.com</a>
+                                <a href="mailto:{{ parameter('var_email', 'support@example.com') }}">{{ parameter('var_email', 'support@example.com') }}</a>
                             </p>
                         </div>
                         <!-- End Single Widget -->
@@ -79,10 +79,10 @@
                         <div class="single-footer f-link">
                             <h3>Information</h3>
                             <ul>
-                                <li><a href="javascript:void(0)">Quiz</a></li>
-                                <li><a href="javascript:void(0)">Delivery</a></li>
-                                <li><a href="javascript:void(0)">About Us</a></li>
-                                <li><a href="javascript:void(0)">Contact Us</a></li>
+                                <li><a href="/quiz">Quiz</a></li>
+                                <li><a href="/delivery">Delivery</a></li>
+                                <li><a href="/about">About Us</a></li>
+                                <li><a href="/contacts">Contact Us</a></li>
                             </ul>
                         </div>
                         <!-- End Single Widget -->
@@ -120,7 +120,10 @@
                     <div class="col-lg-4 col-12">
                         <div class="copyright">
                             <p>
-                                Designed and Developed by
+                                Work by
+                                <a href="https://getwebspace.org" rel="nofollow" target="_blank">WebSpace Engine</a>
+                                <br/>
+                                Designed in
                                 <a href="https://graygrids.com/" rel="nofollow" target="_blank">GrayGrids</a>
                             </p>
                         </div>
@@ -130,10 +133,9 @@
                             <li>
                                 <span>Follow Us On:</span>
                             </li>
-                            <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                            <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                            <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
-                            <li><a href="javascript:void(0)"><i class="lni lni-google"></i></a></li>
+                            <li><a href="{{ parameter('var_soc_facebook', '#') }}"><i class="lni lni-facebook-filled"></i></a></li>
+                            <li><a href="{{ parameter('var_soc_twitter', '#') }}"><i class="lni lni-twitter-original"></i></a></li>
+                            <li><a href="{{ parameter('var_soc_instagram', '#') }}"><i class="lni lni-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
