--- a/theme/default/components/shipping.twig
+++ b/theme/default/components/shipping.twig
@@ -9,7 +9,7 @@
                 </div>
                 <div class="media-body">
                     <h5>Free Shipping</h5>
-                    <span>On order over $99</span>
+                    <span>{{ parameter('var_shipping', 'On order over $99') }}</span>
                 </div>
             </li>
             <!-- Money Return -->
@@ -19,7 +19,7 @@
                 </div>
                 <div class="media-body">
                     <h5>24/7 Support.</h5>
-                    <span>Live Chat Or Call.</span>
+                    <span>{{ parameter('var_support', 'Live Chat Or Call.') }}</span>
                 </div>
             </li>
             <!-- Support 24/7 -->
@@ -29,7 +29,7 @@
                 </div>
                 <div class="media-body">
                     <h5>Online Payment.</h5>
-                    <span>Secure Payment Services.</span>
+                    <span>{{ parameter('var_payment', 'Secure Payment Services.') }}</span>
                 </div>
             </li>
             <!-- Safe Payment -->
@@ -39,7 +39,7 @@
                 </div>
                 <div class="media-body">
                     <h5>Easy Return.</h5>
-                    <span>Hassle Free Shopping.</span>
+                    <span>{{ parameter('var_return', 'Hassle Free Shopping.') }}</span>
                 </div>
             </li>
         </ul>
