--- a/theme/default/publication.list.twig
+++ b/theme/default/publication.list.twig
@@ -20,7 +20,11 @@
                 <div class="col-lg-8 col-md-12 col-12">
                     <div class="row">
                         {% for item in publications %}
-                            {% include category.template.short with {'categories': categories, 'item': item} only %}
+                            <!-- Start Single Blog -->
+                            <div class="col-lg-6 col-md-6 col-12">
+                                {% include category.template.short with {'categories': categories, 'item': item} only %}
+                            </div>
+                            <!-- End Single Blog -->
                         {% endfor %}
                     </div>
 
