--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -290,7 +290,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Order'|locale,
+                                            'label': 'Sort order'|locale,
                                             'type': 'number',
                                             'name': 'order',
                                             'args': {
