--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -489,7 +489,7 @@
                             {# Tab: Дополнительно #}
                             <div class="tab-pane fade" id="other" role="tabpanel">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-12">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Address'|locale,
                                             'type': 'text',
