fix column name

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -971,7 +971,7 @@
                                                         'option': {
                                                             'uuid': 'uuid',
                                                             'external_id': 'external_id',
-                                                            'Title': 'Title',
+                                                            'title': 'title',
                                                             'address': 'address',
                                                             'vendorcode': 'vendorcode',
                                                             'barcode': 'barcode',
